--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Art and craft</title>
+    <title>Art and craft || Acrylic Portrait Canvas</title>
   </head>
   <body>
     <div id="root"></div>
